--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,24 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Login to Github Repo
-      uses: docker/login-action@v1
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v4.1.1
       with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GHCR_TOKEN }}
-        
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: ghcr.io/${{ github.repository_owner }}/audiocollectionsorter:latest
+        github-token: ${{ secrets.GHCR_TOKEN }}
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
