--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,8 @@ jobs:
     - name: Build and push Docker images
       uses: docker/build-push-action@v4.1.1
       with:
+        push: true
+        platforms: linux/amd64,linux/arm64
         github-token: ${{ secrets.GHCR_TOKEN }}
 
     - name: Image digest
