--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,9 @@ jobs:
       uses: docker/build-push-action@v4.1.1
       with:
         push: true
+        tags: |
+            type=schedule
+            type=ref,event=branch
         platforms: linux/amd64,linux/arm64
         github-token: ${{ secrets.GHCR_TOKEN }}
 
