--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,9 +17,7 @@ jobs:
       uses: docker/build-push-action@v4.1.1
       with:
         push: true
-        tags: |
-            type=schedule
-            type=ref,event=branch
+        tags: type=ref,event=branch
         platforms: linux/amd64,linux/arm64
         github-token: ${{ secrets.GHCR_TOKEN }}
 
