--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,24 +2,28 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+     tags:        
+      - v*
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - name: Build and push Docker images
       uses: docker/build-push-action@v4.1.1
       with:
-        # push: true
-        tags: audiocollectionsorter
+        push: true
+        tags: audiobookcollectionsorter:${{GITHUB_REF_NAME}}
         file: AudioBookSort_Dockerfile
-        github-token: ${{ secrets.GHCR_TOKEN }}
+        github-token: ${{ secrets.GHCR_TOKEN_V2 }}
+        
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v4.1.1
+      with:
+        push: true
+        tags: audiocollectionsorter:${{GITHUB_REF_NAME}}
+        file: AudioBookSort_Dockerfile
+        github-token: ${{ secrets.GHCR_TOKEN_V2 }}
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
