--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,10 @@
 name: Docker Image CI
-
 on:
   push:
-     tags:        
+    branches:    
+      - main
+    tags:        
       - v*
-
 jobs:
   build:
     runs-on: ubuntu-latest
