--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Build and push Docker images
+    - name: Build and push Docker images for audiobookcollectionsorter
       uses: docker/build-push-action@v4.1.1
       with:
         push: true
@@ -17,7 +17,7 @@ jobs:
         file: AudioBookSort_Dockerfile
         github-token: ${{ secrets.GHCR_TOKEN_V2 }}
         
-    - name: Build and push Docker images
+    - name: Build and push Docker images for audiocollectionsorter
       uses: docker/build-push-action@v4.1.1
       with:
         push: true
