--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,16 +8,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
+    
+    - name: Docker Login
+      uses: docker/login-action@v2.2.0
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_TOKEN_V2 }}
+        
     - name: Build and push Docker images for audiobookcollectionsorter
       uses: docker/build-push-action@v4.1.1
       with:
         push: true
         tags: audiobookcollectionsorter:${{ github.ref_name }}
         file: AudioBookSort_Dockerfile
-        github-token: ${{ secrets.GHCR_TOKEN_V2 }}
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
         
     - name: Build and push Docker images for audiocollectionsorter
       uses: docker/build-push-action@v4.1.1
@@ -25,6 +33,3 @@ jobs:
         push: true
         tags: audiocollectionsorter:${{ github.ref_name }}
         file: AudioBookSort_Dockerfile
-        github-token: ${{ secrets.GHCR_TOKEN_V2 }}
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
