--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,20 +16,29 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v2.2.0
       with:
-        registry: ${{ env.REGISTRY }}
+        registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GHCR_TOKEN_V2 }}
+        
+    - name: Docker Metadata action
+      # You may pin to the exact commit or the version.
+      # uses: docker/metadata-action@818d4b7b91585d195f67373fd9cb0332e31a7175
+      uses: docker/metadata-action@v4.6.0
+      with:
+        images: ghcr.io/${{ github.repository }}
         
     - name: Build and push Docker images for audiobookcollectionsorter
       uses: docker/build-push-action@v4.1.1
       with:
         push: true
-        tags: audiobookcollectionsorter:${{ github.ref_name }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
         file: AudioBookSort_Dockerfile
         
     - name: Build and push Docker images for audiocollectionsorter
       uses: docker/build-push-action@v4.1.1
       with:
         push: true
-        tags: audiocollectionsorter:${{ github.ref_name }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
         file: AudioBookSort_Dockerfile
