--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,14 +16,13 @@ jobs:
     - name: Docker Login
       uses: docker/login-action@v2.2.0
       with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ secrets.dockeruser }}
-        password: ${{ secrets.GHCR_TOKEN_V2 }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
         
     - name: Docker Metadata action
       uses: docker/metadata-action@v4.6.0
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        images: orbitalteapot/audiocollectionsorter
         
     - name: Build and push Docker images for audiobookcollectionsorter
       uses: docker/build-push-action@v4.1.1
@@ -37,4 +36,4 @@ jobs:
       with:
         push: true
         tags: audiocollectionsorter:${{ github.ref_name }}
-        file: AudioBookSort_Dockerfile
+        file: AudioSort_Dockerfile
