--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,7 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         file: AudioBookSort_Dockerfile
+        context: .
         
     - name: Docker Metadata action
       uses: docker/metadata-action@v4.6.0
@@ -44,3 +45,4 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         file: AudioSort_Dockerfile
+        context: .
