--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         
     - name: Docker Metadata action
+      id: meta
       uses: docker/metadata-action@v4.6.0
       with:
         images: orbitalteapot/audiobookcollectionsorter
