--- a/.github/workflows/docker-audiosort-latest.yml
+++ b/.github/workflows/docker-audiosort-latest.yml
@@ -1,8 +1,11 @@
 name: Push to DockerHub taged
 on:
   push:
-    tags:        
-      - v*
+    branches:        
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,6 +25,6 @@ jobs:
       uses: docker/build-push-action@v4.1.1
       with:
         push: true
-        tags: ${{ steps.meta.outputs.tags }}
+        tags: latest
         labels: ${{ steps.meta.outputs.labels }}
         file: AudioSort_Dockerfile
