--- a/.github/workflows/docker-audiobooksort-latest.yml
+++ b/.github/workflows/docker-audiobooksort-latest.yml
@@ -26,6 +26,6 @@ jobs:
       uses: docker/build-push-action@v4.1.1
       with:
         push: true
-        tags: latest
+        tags: orbitalteapot/audiobookcollectionsorter:latest
         labels: ${{ steps.meta.outputs.labels }}
         file: AudioBookSort_Dockerfile
