--- a/ManagerConsole/Dockerfile
+++ b/ManagerConsole/Dockerfile
@@ -6,6 +6,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["ManagerConsole/ManagerConsole.csproj", "ManagerConsole/"]
+COPY ["AudioFileSorter/AudioFileSorter.csproj", "AudioFileSorter/"]
 RUN dotnet restore "ManagerConsole/ManagerConsole.csproj"
 COPY . .
 WORKDIR "/src/ManagerConsole"
@@ -17,5 +18,9 @@ RUN dotnet publish "ManagerConsole.csproj" -c $BUILD_CONFIGURATION -o /app/publi
 
 FROM base AS final
 WORKDIR /app
+RUN mkdir "source"
+RUN mkdir "destination"
+RUN mkdir "export"
+VOLUME ["/source", "/destination", "/export"]
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "ManagerConsole.dll"]
