--- a/ManagerConsole/ManagerConsole.csproj
+++ b/ManagerConsole/ManagerConsole.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <Version>2.0.2</Version>
     </PropertyGroup>
 
     <ItemGroup>
